@@ -95,17 +95,17 @@ public final class MessageSubscriptionStateTest {
 
     // then
     assertThat(subscriptions).hasSize(1);
-    assertThat(subscriptions.get(0).getRecord().getProcessInstanceKey())
+    final var expectedSubscription = subscriptions.getFirst().getRecord();
+    assertThat(expectedSubscription.getProcessInstanceKey())
         .isEqualTo(subscription.getProcessInstanceKey());
-    assertThat(subscriptions.get(0).getRecord().getElementInstanceKey())
+    assertThat(expectedSubscription.getElementInstanceKey())
         .isEqualTo(subscription.getElementInstanceKey());
-    assertThat(subscriptions.get(0).getRecord().getMessageName())
-        .isEqualTo(subscription.getMessageName());
-    assertThat(subscriptions.get(0).getRecord().getCorrelationKey())
+    assertThat(expectedSubscription.getProcessDefinitionKey())
+        .isEqualTo(subscription.getProcessDefinitionKey());
+    assertThat(expectedSubscription.getMessageName()).isEqualTo(subscription.getMessageName());
+    assertThat(expectedSubscription.getCorrelationKey())
         .isEqualTo(subscription.getCorrelationKey());
-    assertThat(subscriptions.get(0).getRecord().getVariables())
-        .isEqualTo(subscription.getVariables());
-    assertThat(subscriptions.get(0).isCorrelating()).isFalse();
+    assertThat(expectedSubscription.getVariables()).isEqualTo(subscription.getVariables());
   }
 
   @Test
@@ -194,6 +194,7 @@ public final class MessageSubscriptionStateTest {
     return new MessageSubscriptionRecord()
         .setProcessInstanceKey(1L)
         .setElementInstanceKey(elementInstanceKey)
+        .setProcessDefinitionKey(2L)
         .setBpmnProcessId(wrapString("process"))
         .setMessageName(wrapString(name))
         .setCorrelationKey(wrapString(correlationKey))
